[gd_scene load_steps=12 format=2]

[ext_resource path="res://Fonts/pixel_font_data.tres" type="DynamicFont" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]
[ext_resource path="res://GolfScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://test_rect.png" type="Texture" id=4]
[ext_resource path="res://SaveData.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.968627, 0.8, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.133333, 0.133333, 0.133333, 1 )

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="StyleBoxLine" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.133333, 0.133333, 0.133333, 1 )

[sub_resource type="StyleBoxFlat" id=6]

[node name="MainMenu" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
game_scene = ExtResource( 3 )

[node name="SaveData" parent="." instance=ExtResource( 5 )]

[node name="StartMenu" type="Control" parent="."]
visible = false
margin_right = 64.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Panel" parent="StartMenu"]
margin_left = 21.0
margin_top = 21.0
margin_right = 43.0
margin_bottom = 30.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="StartMenu/Start"]
margin_right = 22.0
margin_bottom = 9.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "start"
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Panel" parent="StartMenu"]
margin_left = 21.0
margin_top = 32.0
margin_right = 43.0
margin_bottom = 41.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="StartMenu/Quit"]
margin_right = 23.0
margin_bottom = 9.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelMenu" type="Control" parent="."]
margin_right = 64.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelName" type="Label" parent="LevelMenu"]
margin_top = 1.0
margin_right = 64.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 1 )
text = "water temple"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HiScoreLabel" type="Label" parent="LevelMenu"]
margin_top = 48.0
margin_right = 64.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 1 )
text = "high score"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HiScore" type="Label" parent="LevelMenu"]
margin_top = 55.0
margin_right = 64.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1" type="TextureRect" parent="LevelMenu"]
margin_left = 4.0
margin_top = 12.0
margin_right = 20.0
margin_bottom = 28.0
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2" type="TextureRect" parent="LevelMenu"]
margin_left = 24.0
margin_top = 12.0
margin_right = 40.0
margin_bottom = 28.0
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level3" type="TextureRect" parent="LevelMenu"]
margin_left = 44.0
margin_top = 12.0
margin_right = 60.0
margin_bottom = 28.0
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level4" type="TextureRect" parent="LevelMenu"]
margin_left = 4.0
margin_top = 32.0
margin_right = 20.0
margin_bottom = 48.0
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level5" type="TextureRect" parent="LevelMenu"]
margin_left = 24.0
margin_top = 32.0
margin_right = 40.0
margin_bottom = 48.0
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level6" type="TextureRect" parent="LevelMenu"]
margin_left = 44.0
margin_top = 32.0
margin_right = 60.0
margin_bottom = 48.0
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartMenu/Start/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="StartMenu/Quit/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="mouse_entered" from="LevelMenu/Level1" to="." method="_on_Level1_mouse_entered"]
[connection signal="mouse_exited" from="LevelMenu/Level1" to="." method="_on_Level_mouse_exited"]
[connection signal="mouse_entered" from="LevelMenu/Level2" to="." method="_on_Level2_mouse_entered"]
[connection signal="mouse_exited" from="LevelMenu/Level2" to="." method="_on_Level_mouse_exited"]
[connection signal="mouse_entered" from="LevelMenu/Level3" to="." method="_on_Level3_mouse_entered"]
[connection signal="mouse_exited" from="LevelMenu/Level3" to="." method="_on_Level_mouse_exited"]
[connection signal="mouse_entered" from="LevelMenu/Level4" to="." method="_on_Level4_mouse_entered"]
[connection signal="mouse_exited" from="LevelMenu/Level4" to="." method="_on_Level_mouse_exited"]
[connection signal="mouse_entered" from="LevelMenu/Level5" to="." method="_on_Level5_mouse_entered"]
[connection signal="mouse_exited" from="LevelMenu/Level5" to="." method="_on_Level_mouse_exited"]
[connection signal="mouse_entered" from="LevelMenu/Level6" to="." method="_on_Level6_mouse_entered"]
[connection signal="mouse_exited" from="LevelMenu/Level6" to="." method="_on_Level_mouse_exited"]
